fix: making hr in prose more legible

--- a/packages/react/src/02-components/prose/prose.scss
+++ b/packages/react/src/02-components/prose/prose.scss
@@ -159,7 +159,7 @@
   }
 
   hr {
-    border: var(--j-border-width-lg) solid var(--j-c-background-f1);
+    border: var(--j-border-width-lg) solid var(--j-c-background-f2);
     border-radius: var(--j-border-radius-sm);
     margin-top: var(--j-space-16);
     margin-bottom: var(--j-space-16);
